--- a/HTML/Contactar.html
+++ b/HTML/Contactar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="../CSS/Contact.css">
+    <link rel="stylesheet" href="../CSS/contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,7 +21,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="Home.html">NOSOTROS</a></li>
+                    <li><a href="pagina.html">NOSOTROS</a></li>
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
                     <li><a href="#">CONTÁCTENOS</a></li>
@@ -76,7 +76,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="pagina.html">NOSOTROS</a></li>
+                    <li><a href="Home.html">NOSOTROS</a></li>
                     <li><a href="Servicios.html">SERVICIOS</a></li>
                     <li><a href="programar_citas.html">AGENDAR CITA</a></li>
                     <li><a href="#">CONTÁCTENOS</a></li>
