--- a/HTML/Servicios.html
+++ b/HTML/Servicios.html
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+   <footer class="footer">
         <div class="footer-content container">
             <div class="footer-logo">
                 <a href="#" class="logo">RLV</a>
@@ -90,10 +90,10 @@
             <div class="footer-links">
                 <ul>
                     <li><a href="pagina.html">NOSOTROS</a></li>
-                    <li><a href="#">SERVICIOS</a></li>
-                    <li><a href="programar_citas.html">AGENDAR CITA</a></li>
-                    <li><a href="contact.html">CONTÁCTENOS</a></li>
-                    <li><a href="../HTML/login.html">CERRAR SESIÓN</a></li>
+                    <li><a href="servicios.html">SERVICIOS</a></li>
+                    <li><a href="#">AGENDAR CITA</a></li>
+                    <li><a href="Contact.html">CONTÁCTENOS</a></li>
+                    <li><a href="InicioSesion.html">CERRAR SESIÓN</a></li>
                 </ul>
             </div>
             <div class="footer-social">
